[gd_scene load_steps=8 format=2]

[ext_resource path="res://SCRIPTS/Crystal Armor.gd" type="Script" id=1]
[ext_resource path="res://Gimmicks/Crystal Armor.png" type="Texture" id=2]
[ext_resource path="res://SFX/CrystalArmor.wav" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "Armor",
"speed": 8.0
} ]

[node name="Crystal Armor" type="Node2D"]
visible = false
script = ExtResource( 1 )

[node name="IdleAnimation" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "Armor"
playing = true

[node name="PowerPunch" type="Sprite" parent="."]

[node name="HyperShield" type="Sprite" parent="."]

[node name="ActivationAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
